SERVER-6598 carry userFlags over across shards

Create collection with full config if doesn't already exist. This is
useful when a userFlag is set on a non-sharded collection, then brought
into a sharded cluster.